--- a/templates/core/widgets/catalogue_table.html
+++ b/templates/core/widgets/catalogue_table.html
@@ -1,9 +1,11 @@
+{% load i18n %}
+
 {% if lecturenotes %}
 <table class="table table-xsm mb-0 table-striped table-fixed text-nowrap table-bordered-vertical">
     <tr>
-        <th>Skriptenname</th>
-        <th class="text-right">Preis</th>
-        <th class="text-right">Verfügbarkeit</th>
+        <th>{% trans 'title'|capfirst %}</th>
+        <th class="text-right">{% trans 'price'|capfirst %}</th>
+        <th class="text-right">{% trans 'availability'|capfirst %}</th>
     </tr>
     {% for lecturenote in lecturenotes %}
     <tr>
@@ -11,14 +13,14 @@
         <td class="text-right">{{ lecturenote.price }} €</td>
         <td class="text-right">
             {% if lecturenote.stock > 0 %}
-            {{ lecturenote.stock }} Exemplare
+            {% blocktrans with stock=lecturenote.stock %}{{ stock }} copies{% endblocktrans %}
             {% else %}
-            Ausverkauft
+            {% trans 'sold out' %}
             {% endif %}
         </td>
     </tr>
     {% endfor %}
 </table>
 {% else %}
-Derzeit sind keine {{ subject }}-Skripte verfügbar.
+{% blocktrans %}There are currently no lecture notes for {{ subject }} available.{% endblocktrans %}
 {% endif %}
