--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% load filters %}
 {% load static %}
 
@@ -13,8 +14,13 @@
 {% url 'core:management_list' 'deposit' as management_deposit %}
 {% url 'core:management_list' 'user' as management_user %}
 
+{% get_current_language as LANGUAGE_CODE %}
+{% get_available_languages as LANGUAGES %}
+{% get_language_info for LANGUAGE_CODE as language %}
+{% get_language_info_list for LANGUAGES as languages %}
+
 <!DOCTYPE html>
-<html lang="de">
+<html lang="{{ LANGUAGE_CODE }}">
 
 <head>
     <meta charset="utf-8">
@@ -77,7 +83,7 @@
                             class="nav-link {% if request.path == catalogue_url %}active{% endif %}"
                             href="{{ catalogue_url }}"
                         >
-                            Katalog
+                            {% trans 'catalogue'|capfirst %}
                         </a>
                     </li>
                     {% if request.user.vendor %}
@@ -86,7 +92,7 @@
                             class="nav-link {% if sale_url in request.path %}active{% endif %}"
                             href="{{ sale_url }}"
                         >
-                            Verkauf
+                            {% trans 'sale'|capfirst %}
                         </a>
                     </li>
                     <li class="nav-item">
@@ -94,7 +100,7 @@
                             class="nav-link {% if shifts_url in request.path %}active{% endif %}"
                             href="{{ shifts_url }}"
                         >
-                            Verkaufsschichten
+                            {% trans 'shifts'|capfirst %}
                         </a>
                     </li>
                     {% endif %}
@@ -109,7 +115,7 @@
                             aria-haspopup="true"
                             aria-expanded="false"
                         >
-                            Verwaltung
+                            {% trans 'management'|capfirst %}
                         </a>
                         <div
                             class="dropdown-menu"
@@ -120,37 +126,37 @@
                                 class="dropdown-item{% if management_lecturenote in request.path %} active{% endif %}"
                                 href="{{ management_lecturenote }}"
                             >
-                                Skripten
+                                {% trans 'lecture notes'|capfirst %}
                             </a>
                             <a
                                 class="dropdown-item{% if management_author in request.path %} active{% endif %}"
                                 href="{{ management_author }}"
                             >
-                                Autoren
+                                {% trans 'authors'|capfirst %}
                             </a>
                             <a
                                 class="dropdown-item{% if management_depositnote in request.path %} active{% endif %}"
                                 href="{{ management_depositnote }}"
                             >
-                                Kautionsscheine
+                                {% trans 'deposit notes'|capfirst %}
                             </a>
                             <a
                                 class="dropdown-item{% if management_shift in request.path %} active{% endif %}"
                                 href="{{ management_shift }}"
                             >
-                                Verkaufsschichten
+                                {% trans 'shifts'|capfirst %}
                             </a>
                             <a
                                 class="dropdown-item{% if management_printingquota in request.path %} active{% endif %}"
                                 href="{{ management_printingquota }}"
                             >
-                                Druckkontingente
+                                {% trans 'printing quotas'|capfirst %}
                             </a>
                             <a
                                 class="dropdown-item{% if management_deposit in request.path %} active{% endif %}"
                                 href="{{ management_deposit }}"
                             >
-                                Kautionen
+                                {% trans 'deposits'|capfirst %}
                             </a>
                             {% endif %}
                             {% if request.user.referent and request.user.financier %}
@@ -161,7 +167,7 @@
                                 class="dropdown-item{% if management_finance in request.path %} active{% endif %}"
                                 href="{{ management_finance }}"
                             >
-                                Kassenbuch
+                                {% trans 'cashbook'|capfirst %}
                             </a>
                             {% endif %}
                             {% if request.user.referent or request.user.financier %}
@@ -170,7 +176,7 @@
                                 class="dropdown-item{% if management_user in request.path %} active{% endif %}"
                                 href="{{ management_user }}"
                             >
-                                Benutzer
+                                {% trans 'users'|capfirst %}
                             </a>
                             {% endif %}
                         </div>
@@ -185,16 +191,50 @@
                             class="nav-link"
                             href="{% url 'logout' %}"
                         >
-                            {{ request.user.username }} abmelden
+                            {% blocktrans trimmed with username=request.user.username %}
+                            Log out {{ username }}
+                            {% endblocktrans %}
                         </a>
                         {% else %}
                         <a
                             class="nav-link"
                             href="{% url 'login' %}"
                         >
-                            Anmelden
+                            {% trans 'log in'|capfirst %}
                         </a>
                         {% endif %}
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a
+                            class="nav-link dropdown-toggle"
+                            href="#"
+                            id="languageDropdown"
+                            role="button"
+                            data-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false"
+                        >
+                            <i class="far fa-globe-americas"></i>
+                        </a>
+                        <form
+                            action="{% url 'set_language' %}"
+                            method="post"
+                            class="dropdown-menu dropdown-menu-right"
+                            aria-labelledby="languageDropdown"
+                        >
+                            {% csrf_token %}
+
+                            {% for language in languages %}
+                            <button
+                                type="submit"
+                                name="language"
+                                value="{{ language.code }}"
+                                class="dropdown-item {% if language.code == LANGUAGE_CODE %} active{% endif %}"
+                            >
+                                {{ language.name_local }}
+                            </button>
+                            {% endfor %}
+                        </form>
                     </li>
                 </ul>
             </div>
@@ -214,7 +254,7 @@
                         href="https://fs.tum.de/impressum/"
                         target="_blank"
                     >
-                        Impressum
+                        {% trans 'imprint'|capfirst %}
                     </a>
                 </li>
                 <li class="nav-item">
@@ -223,7 +263,7 @@
                         href="https://fs.tum.de/datenschutz/"
                         target="_blank"
                     >
-                        Datenschutz
+                        {% trans 'privacy policy'|capfirst %}
                     </a>
                 </li>
                 <li class="nav-item">
@@ -232,7 +272,7 @@
                         href="https://github.com/paulhfischer/skriptentool/"
                         target="_blank"
                     >
-                        Über diese Software
+                        {% trans 'about'|capfirst %}
                     </a>
                 </li>
             </ul>
