--- a/templates/core/catalogue.html
+++ b/templates/core/catalogue.html
@@ -1,22 +1,23 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
-{% block title %}Katalog{% endblock %}
+{% block title %}{% trans 'catalogue'|capfirst %}{% endblock %}
 
 {% block content %}
 <div class="card spacer-b">
-    <h2 class="card-header">Mathematik</h2>
+    <h2 class="card-header">{% trans 'mathematics'|capfirst %}</h2>
     <div class="card-body table-responsive">
         {{ mathematics_list }}
     </div>
 </div>
 <div class="card spacer-b">
-    <h2 class="card-header">Physik</h2>
+    <h2 class="card-header">{% trans 'physics'|capfirst %}</h2>
     <div class="card-body table-responsive">
         {{ physics_list }}
     </div>
 </div>
 <div class="card">
-    <h2 class="card-header">Informatik</h2>
+    <h2 class="card-header">{% trans 'informatics'|capfirst %}</h2>
     <div class="card-body table-responsive">
         {{ informatics_list }}
     </div>
