--- a/templates/core/sale.html
+++ b/templates/core/sale.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load filters %}
 
-{% block title %}Verkauf{% endblock %}
+{% block title %}{% trans 'sale'|capfirst %}{% endblock %}
 
 {% block extrascript %}
 <script>
