--- a/templates/core/sale/order.html
+++ b/templates/core/sale/order.html
@@ -1,6 +1,7 @@
+{% load i18n %}
 {% if can_order %}
 <div class="card spacer-b">
-    <h2 class="card-header">Buchen</h2>
+    <h2 class="card-header">{% trans 'order'|capfirst %}</h2>
     <div class="card-body">
         <form method="post">
             {% csrf_token %}
@@ -22,7 +23,7 @@
                 name="order"
                 class="btn btn-primary btn-block"
             >
-                Buchen
+                {% trans 'order'|capfirst %}
             </button>
         </form>
     </div>
