--- a/templates/core/shifts.html
+++ b/templates/core/shifts.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load i18n %}
 {% load filters bootstrap %}
 
 {% block title %}{% trans 'shifts'|capfirst %}{% endblock %}
 
 {% block extrascript %}
+<script
+    src="{% static 'js/select.js' %}"
+    data-search="{% trans 'search'|capfirst %}"
+    id="select-script"
+></script>
 <script>
     $(window).on('load', () => {
         $('#{{ form.semester.id_for_label }}').on('change', () => {
