--- a/templates/core/shifts.html
+++ b/templates/core/shifts.html
@@ -41,7 +41,7 @@
                 <table class="table table-xsm mb-0">
                     <thead>
                         <tr>
-                            <th>{% trans 'Time' %}</th>
+                            <th>{% trans 'time'|capfirst %}</th>
                             <th class="text-center">{% trans 'reviewed'|capfirst %}</th>
                             <th class="text-center">{% trans 'beverages'|capfirst %}</th>
                         </tr>
